--- a/proiecttestare/src/main/resources/templates/register.html
+++ b/proiecttestare/src/main/resources/templates/register.html
@@ -30,7 +30,7 @@
         </div>
         <input type="submit" th:value="#{sign_in}" class="btn">
         <div class="links">
-            <a href="#">forget password</a>
+            <a href="#" th:text="#{}">forget password</a>
             <a href="/register">sign up</a>
         </div>
     </form>
