--- a/proiecttestare/src/main/resources/static/css/style.css
+++ b/proiecttestare/src/main/resources/static/css/style.css
@@ -257,29 +257,12 @@ section {
 }
 
 .home {
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    background: url(../../templates/image/B_bg_img.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
-
-.home .content {
-    width: 50rem;
 }
 
 .home .content h3 {
     font-size: 6rem;
-    color: #fff;
+    color: black;
     padding-bottom: 1rem;
 }
 
@@ -608,7 +591,7 @@ section {
 
 .footer {
     position: relative;
-    background:url(../../templates/image/footer_background.jpg) no-repeat;
+    background: url(../../templates/image/footer_background.jpg) no-repeat;
     background-position: center;
     padding-top: 10rem;
     padding-bottom: 2rem;
