--- a/proiecttestare/src/main/resources/templates/home.html
+++ b/proiecttestare/src/main/resources/templates/home.html
@@ -75,9 +75,11 @@
     </div>
 
     <div class="content">
-        <h3><span>Yummy</span> dessert </h3>
-        <p>Healthy and delicious rewards for pets with personality</p>
-        <div class="amount">5.00 lei - 40 lei</div>
+        <h3 th:text="#{Yummy_treats}"></h3>
+        <p th:text="#{Healthy}"></p>
+        <div class="amount">
+            <h3 th:text="#{lei}"></h3>
+           </div>
         <a href="#"> <img src="image/shop_now_dog.png" alt=""> </a>
     </div>
 
@@ -86,9 +88,13 @@
 <div class="cat-food">
 
     <div class="content">
-        <h3><span>Toys</span> & accessory</h3>
-        <p>We have everything you need to train and keep your pet happy, healthy, and strong</p>
-        <div class="amount">From 15.00 lei</div>
+        <h3 th:text="#{Toys}"></h3>
+        <p th:text="#{We_have}"></p>
+        <div class="amount">
+            <h3 th:text="#{from}"></h3>
+            </div>
+
+
         <a href="#"> <img src="image/shop_now_cat.png" alt=""> </a>
     </div>
 
@@ -100,7 +106,7 @@
 
 <section class="shop" id="shop">
 
-    <h1 class="heading"> our <span> products </span></h1>
+    <h1 th:text="#{our_products}" class="heading"></h1>
 
     <div class="box-container">
 
@@ -114,8 +120,10 @@
                 <img src="image/dog1.jpg" alt="">
             </div>
             <div class="content">
-                <h3>salmone food</h3>
-                <div class="amount"> 3.99 lei</div>
+                <h3 th:text="#{salmon_food}"></h3>
+                <div class="amount">
+                    <h3 th:text="#{leu}"></h3>
+                    </div>
             </div>
         </div>
 
@@ -129,8 +137,10 @@
                 <img src="image/dog2.jpg" alt="">
             </div>
             <div class="content">
-                <h3>cod fish dry food</h3>
-                <div class="amount"> 3.99 lei</div>
+                <h3 th:text="#{cod}"></h3>
+                <div class="amount">
+                    <h3 th:text="#{leu}"></h3>
+                </div>
             </div>
         </div>
 
@@ -144,8 +154,10 @@
                 <img src="image/24xcat.jpg" alt="">
             </div>
             <div class="content">
-                <h3>28 x wet cat food with veal </h3>
-                <div class="amount"> 109 lei</div>
+                <h3 th:text="#{cat_food}"> </h3>
+                <div class="amount">
+                    <h3 th:text="#{leu_l}"></h3>
+                   </div>
             </div>
         </div>
 
@@ -159,8 +171,10 @@
                 <img src="image/56_cat.jpg" alt="">
             </div>
             <div class="content">
-                <h3>56 x wet cat food with trout </h3>
-                <div class="amount"> 207.20 lei</div>
+                <h3 th:text="#{wet_cat_food}"></h3>
+                <div class="amount">
+                    <h3 th:text="#{leu_z}"></h3>
+                </div>
             </div>
         </div>
 
@@ -174,8 +188,10 @@
                 <img src="image/monge.jpg" alt="">
             </div>
             <div class="content">
-                <h3>monge adult light with salmon and rice 12 kg</h3>
-                <div class="amount"> 227.00 lei</div>
+                <h3 th:text="#{monge}"></h3>
+                <div class="amount">
+                    <h3 th:text="#{leu_c}"></h3>
+                    </div>
             </div>
         </div>
 
@@ -189,8 +205,10 @@
                 <img src="image/monge2.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Monge Dogs Puppy&Junior with Salmon and Rice 12 kg</h3>
-                <div class="amount"> 227.00 lei</div>
+                <h3 th:text="#{Monge_dogs}"></h3>
+                <div class="amount">
+                    <h3 th:text="#{leu_x}"></h3>
+                   </div>
             </div>
         </div>
 
@@ -200,44 +218,44 @@
 
 <section class="services" id="services">
 
-    <h1 class="heading"> our <span>services</span></h1>
+    <h1  th:text="#{our_services}"   class="heading"></h1>
 
     <div class="box-container">
 
         <div class="box">
             <i class="fas fa-dog"></i>
-            <h3>dog boarding</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{dog_boarding}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
         <div class="box">
             <i class="fas fa-cat"></i>
-            <h3>cat boarding</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{cat_boarding}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
         <div class="box">
             <i class="fas fa-bath"></i>
-            <h3>spa & grooming</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{spa}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
         <div class="box">
             <i class="fas fa-drumstick-bite"></i>
-            <h3>healthy meal</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{healthy_meal}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
         <div class="box">
             <i class="fas fa-baseball-ball"></i>
-            <h3>activity exercise</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{activity_exercise}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
         <div class="box">
             <i class="fas fa-heartbeat"></i>
-            <h3>health care</h3>
-            <a href="#" class="btn">read more</a>
+            <h3 th:text="#{health_care}"></h3>
+            <a th:text="#{read_more}" href="#" class="btn"></a>
         </div>
 
     </div>
@@ -252,17 +270,17 @@
     </div>
 
     <form action="">
-        <h3>contact us</h3>
-        <input type="text" placeholder="your name" class="box" id="name">
-        <input type="text" placeholder="your email" class="box" id="email">
-        <input type="number" placeholder="your number" class="box" id="number">
-        <textarea name="" placeholder="your message" id="textArea" cols="30" rows="10"></textarea>
-        <input type="submit" value="send message" class="btn" id="submitButton">
+        <h3 th:text="#{contact_us}"></h3>
+        <input th:placeholder="#{your_name}" type="text"  class="box" id="name">
+        <input  th:placeholder="#{your_email}" type="text"  class="box" id="email">
+        <input th:placeholder="#{your_number}"type="number"  class="box" id="number">
+        <textarea  th:placeholder="#{your_message}"  name=""  id="textArea" cols="30" rows="10"></textarea>
+        <input th:value="#{send_message}" type="submit"  class="btn" id="submitButton">
     </form>
 
     <div class="confirm-msg-popup" id="confirmationPopup">
         <div class="popup-title">
-            <p> Please check that your information were correctly saved</p>
+            <p th:text="#{Please_check}"></p>
         </div>
         <div class="popup-info">
             <span class="information-field" id="saved-name"> </span>
@@ -274,7 +292,7 @@
             <span class="information-field" id="saved-number"> </span>
         </div>
 
-        <a id="ok-btn" class="btn">OK</a>
+        <a th:text="#{OK}" id="ok-btn" class="btn"></a>
     </div>
 
 </section>
@@ -284,12 +302,14 @@
     <img src="image/top2_wave.png" alt="">
 
     <div class="share">
-        <a href="#" class="btn"> <i class="fab fa-facebook-f"></i> facebook </a>
-        <a href="#" class="btn"> <i class="fab fa-twitter"></i> twitter </a>
-        <a href="#" class="btn"> <i class="fab fa-instagram"></i> instagram </a>
+        <a th:text="#{facebook}" href="#" class="btn"> <i class="fab fa-facebook-f"></i>  </a>
+        <a th:text="#{twitter}" href="#" class="btn"> <i class="fab fa-twitter"></i> </a>
+        <a th:text="#{instagram}" href="#" class="btn"> <i class="fab fa-instagram"></i>  </a>
     </div>
 
-    <div class="credit"> created by <span> Vrote Oana Diana</span></div>
+    <div  class="credit">
+        <h3 th:text="#{Created}" ></h3>
+    </div>
 
 </section>
 
